--- a/css/team.css
+++ b/css/team.css
@@ -167,7 +167,7 @@ body{
 
 .aboutDiv{
     width: 80%;
-    height: 250px;
+    height: 17vw;
     margin-left: 10%;
     margin-top: 20px;
     position: relative;
